Closed Bug 1876896 Opened 1 year ago Closed 1 year ago

crash when accessing Pipewire camera from multiple tabs

Categories

(Core :: WebRTC, defect)

Firefox 122
defect

Tracking

()

VERIFIED FIXED
124 Branch
Tracking Status
firefox124 --- verified

People

(Reporter: be.0, Assigned: jgrulich)

Details

Attachments

(2 files)

Attached file firefox-backtrace.txt

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:122.0) Gecko/20100101 Firefox/122.0

Steps to reproduce:

  1. Set media.webrtc.camera.allow-pipewire to true in about:config
  2. Go to https://webrtc.github.io/test-pages/src/single-video/ and give it access to a camera via Pipewire
  3. Open another tab of https://webrtc.github.io/test-pages/src/single-video/ or any other page accessing a camera via WebRTC

Actual results:

Firefox crashes (see attached backtrace)

Expected results:

Camera feed is available to all tabs simultaneously via Pipewire

The Bugbug bot thinks this bug should belong to the 'Core::WebRTC' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → WebRTC
Product: Firefox → Core
Flags: needinfo?(apehrson)

This is upstream bug 15211. Jan, do you have anything on file in bugzilla already?

Flags: needinfo?(apehrson) → needinfo?(jgrulich)

(In reply to Andreas Pehrson [:pehrsons] from comment #2)

This is upstream bug 15211. Jan, do you have anything on file in bugzilla already?

I don't. I will backport the upstream fix now.

Flags: needinfo?(jgrulich)

This is a simple backport of an WebRTC upstream change.

Upstream commit: 958c9ac546f33716d097b5092515dcac705151d3

Assignee: nobody → jgrulich
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by pehrsons@gmail.com: https://hg.mozilla.org/integration/autoland/rev/2ba2ef65280b WebRTC backport: Allow VideoCaptureModulePipeWire to be shared with more consumers r=pehrsons,webrtc-reviewers
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch

Thanks for fixing this!

Flags: qe-verify+

I've successfully replicated this issue using Nightly 124.0a1(2024-01-26) on Ubuntu 22.04 following the STR from Comment 0.
Verified as fixed in the latest Firefox 124 version, within the same configuration, where the issue no longer persists.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: