Bug 1876896 - WebRTC backport: Allow VideoCaptureModulePipeWire to be shared with more consumers r=pehrsons,webrtc-reviewers

This is a simple backport of an WebRTC upstream change.

Upstream commit: 958c9ac546f33716d097b5092515dcac705151d3

Differential Revision: https://phabricator.services.mozilla.com/D200142